@@ -458,6 +458,7 @@ class NativeAuthResponseHandler {
                 errorUri = null,
                 status = null,
                 continuationToken = null,
+                expiresIn = null,
                 subError = null
             )
         } else {
