@@ -47,6 +47,7 @@ class ResetPasswordPollCompletionApiResponse(
     @Expose override var statusCode: Int,
     @Expose @SerializedName("status") val status: String?,
     @SerializedName("continuation_token") val continuationToken: String?,
+    @SerializedName("expires_in") val expiresIn: Int?,
     @SerializedName("error") val error: String?,
     @SerializedName("error_description") val errorDescription: String?,
     @SerializedName("error_uri") val errorUri: String?,
@@ -115,7 +116,10 @@ class ResetPasswordPollCompletionApiResponse(
                         ResetPasswordPollCompletionApiResult.InProgress
                     }
                     status.isPollSucceeded() -> {
-                        ResetPasswordPollCompletionApiResult.PollingSucceeded
+                        ResetPasswordPollCompletionApiResult.PollingSucceeded(
+                            continuationToken = continuationToken,
+                            expiresIn = expiresIn
+                        )
                     }
                     else -> {
                         ResetPasswordPollCompletionApiResult.PollingFailed(
